Twitter - background image of video tweet is not cleared while video playing
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox68 | --- | verified |
People
(Reporter: euthanasia_waltz, Assigned: mstange)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
STR:
- Open https://twitter.com/nashiko_cos/status/1116634094685671424 for example
ER:
Background image turns into black when video start playing.
AR:
Background image remains while video playing.
This occurs with gfx.webrender.force-disabled=true on my pc.
With gfx.webrender.force-disabled=false by default has no problem.
Comment 1•7 years ago
|
||
Thanks for reporting and finding out the bug regressed this!
Though I can't reproduce the issue on Linux, I can reproduce it on Windows 10.
| Assignee | ||
Comment 2•6 years ago
|
||
The patch in bug 1538969 marks the entire bounds of the item as opaque. However, the video isn't actually displayed in the entire bounds, it is centered within the bounds depending on aspect ratio and rotation. There's code to calculate that rectangle in nsVideoFrame::BuildLayer and in CreateWebRenderCommands and it's not very straightforward - especially the handling of the rotation makes it a bit tricky.
I recommend we back out just the patch that added the GetOpaqueRegion implementation. Once Matt is back from PTO, he can take another stab at it.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
Hello,
Reproduced the issue with Firefox 68.0a1 (20190412215855) on Windows 10 x64 using steps from comment 0.
The issue is verified using Firefox 68.0b7 (20190603181408) on Windows 10x64.
Updated•6 years ago
|
Updated•4 years ago
|
Description
•