Bug 1543944 - Don't mark nsDisplayVideo as opaque for now because we were using a rectangle that's too big. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D27979

--HG--
extra : moz-landing-system : lando